<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Anlasilmadi">Could not understand.</string>
    <string name="Close">NavBar</string>
    <string name="Evet">Yes</string>
    <string name="Hayir">No</string>
    <string name="Open">Side menu, to close slide left</string>
    <string name="S1_kesfetButton">OBJECT DETECTION</string>
    <string name="S1_objeAraButton">SEARCH</string>
    <string name="S1_yaziOkumaGecisButton">Text reader</string>
    <string name="S2_kopyalaButton">Copy</string>
    <string name="S2_kopyalandi_bildirim">Copied</string>
    <string name="S2_metinKopyalamak">Do you want to copy text</string>
    <string name="S2_renkTanimaGecisButton">Color recognition</string>
    <string name="S2_yaziOkuButton">READ</string>
    <string name="S2_yaziOkuDurdurButton">STOP</string>
    <string name="S3_objeTanımaGecisButton">Object Recognition</string>
    <string name="S3_renkOkuButton">Read color</string>
    <string name="SES_Hizi_arttirildi">Speech speed increased.</string>
    <string name="SES_Hizi_azaltildi">Speech speed decreased</string>
    <string name="Taniyamiyorum">I could not recognize this object now, plase try another object.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_name_detection">Virtual Eye</string>
    <string name="anaEkranaDonmeTalimati">To Turn back to main page, slide to left with two fingers</string>
    <string name="app_name">Virtual Eye</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bize_ulasin">"To send us feedback , please send mail to mimariyazilim@gmail.com "</string>
    <string name="bizeulasinmenu">Contact us</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bulunamadi">Could not find , please let me look again.</string>
    <string name="camera_error">"This device doesn't support Camera2 API."</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="color_BLACK">black</string>
    <string name="color_BLUE">blue</string>
    <string name="color_BROWN">brown</string>
    <string name="color_Cyan">cyan</string>
    <string name="color_GRAY">gray</string>
    <string name="color_GREEN">green</string>
    <string name="color_ORANGE">orange</string>
    <string name="color_PINK">pink</string>
    <string name="color_RED">red</string>
    <string name="color_YELLOW">yellow</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="gorunuyor">is seen.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="kullanim_kilavuzu">"Welcome, This app have tree screen and will be opened with object recognition screen. In object recognition screen, there are two functional button, press Object Detection to recognize every object around you,  press Text Reader to open text reader, there is four button, Read to start reading, Stop to stop reading, Copy for the previously readed text, and Color Recognition to open color recognition mode. In color recognition mode, there is two button, Read Color to read color of object and Object recognition to go object recognition mode. "</string>
    <string name="kullanimkilavuzumenu">User manual with audio</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_bar_anaekranaDon">Turn to main page</string>
    <string name="nesne_taninanmiyor">I can not recognize this object , please try another object.</string>
    <string name="nesne_tarama_gecis">Object recognition is opening</string>
    <string name="okumahiziayarimenu">Speech speech settings</string>
    <string name="ortada">on forward</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="renk_tanima_gecis">Color recognition mode is opening</string>
    <string name="sagda">on right</string>
    <string name="search_menu_title">Search</string>
    <string name="solda">on left</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="yazi_bulunamadi">No text.</string>
    <string name="yazi_okuma_gecis">Text reader is opening.</string>
</resources>
