<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/yaziOku" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SurfaceView android:id="@id/surface_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="12.0dip" android:gravity="center|left" android:id="@id/S2_yaziOkuButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/S2_yaziOkuButton" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:textAlignment="center" android:layout_marginStart="24.0dip" android:layout_marginEnd="52.0dip" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/S2_durdurButton" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.964" />
        <Button android:textSize="12.0dip" android:gravity="center|left" android:id="@id/S2_durdurButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/S2_yaziOkuDurdurButton" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:textAlignment="center" android:layout_marginStart="52.0dip" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/S2_yaziOkuButton" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.964" />
        <Button android:textSize="12.0dip" android:gravity="center|left" android:id="@id/S2_kopyalaButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/S2_kopyalaButton" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:textAlignment="center" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" app:layout_constraintBottom_toTopOf="@id/S2_renkGecisButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.922" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.988" />
        <Button android:textSize="12.0dip" android:gravity="center|left" android:id="@id/S2_renkGecisButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/S2_renkTanimaGecisButton" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:textAlignment="center" android:layout_marginEnd="24.0dip" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.916" app:layout_constraintStart_toEndOf="@id/S2_durdurButton" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.964" />
        <TextView android:id="@id/text_view" android:layout_width="53.0dip" android:layout_height="wrap_content" android:layout_marginBottom="108.0dip" android:text=" " app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.455" app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>