<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:orientation="vertical" android:id="@id/drawer_lay" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/Screen" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@id/bottom_sheet_layout" android:visibility="gone" layout="@layout/layout_bottom_sheet" />
        <RelativeLayout android:orientation="vertical" android:id="@id/relativeLayout" android:background="#863d9ae9" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <FrameLayout android:id="@id/container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:foregroundGravity="top" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <Button android:gravity="center|left" android:id="@id/objeAraButton" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/S1_objeAraButton" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:textAlignment="center" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" />
                <Button android:gravity="center|left" android:id="@id/yaziOkuButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/S1_yaziOkumaGecisButton" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:textAlignment="center" android:layout_marginEnd="32.0dip" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.966" />
                <Button android:gravity="center|left" android:id="@id/kesfetButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/S1_kesfetButton" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:textAlignment="center" android:layout_marginStart="32.0dip" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.966" />
                <Button android:gravity="center|left" android:id="@id/button7" android:visibility="invisible" android:layout_width="329.0dip" android:layout_height="404.0dip" android:layout_alignParentTop="false" android:layout_centerVertical="false" android:alpha="100.0" android:layout_marginStart="46.0dip" android:layout_marginEnd="36.0dip" android:layout_alignParentStart="true" android:backgroundTint="#00AB66" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="@android:drawable/screen_background_dark_transparent" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                    <TextView android:textSize="50.0dip" android:textColor="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/app_name" android:textAlignment="center" />
                </androidx.appcompat.widget.Toolbar>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView android:layout_gravity="start" android:id="@id/nav_view" android:background="#ff326695" android:layout_width="wrap_content" android:layout_height="fill_parent" app:headerLayout="@layout/navigation_header" app:menu="@menu/navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>